--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* General Styles */
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
@@ -30,7 +31,7 @@ a {
 a:hover {
     text-decoration: underline;
 }
-
+/* Hero Section */
  .flex-container{
     display:flex;
     justify-content: center;    
@@ -139,21 +140,19 @@ img {
         margin:0;
     }
     #interests {
-        background-color: #e8e7e7;
         display:flex;
         justify-content:center;
-        width: 100%;
         padding: 0;
         margin: 0;
         }
 .intereses{
+    background-color: #e8e7e7;
     display:flex;
     flex-direction: column;
-        padding: 5rem;
-        justify-content:center;
-        align-self: center;
-        width: 100%;
-        box-sizing: border-box;
+    padding: 5rem;
+    justify-content:center;    align-self: center;
+    width: 100%;
+    box-sizing: border-box;
         }
 
 #contact{
@@ -178,8 +177,9 @@ img {
 footer {
         background-color:rgb(202, 216, 216);
         display:flex;
-        padding-left:3rem;
+        padding-left:0rem;
         justify-content: center;
+        width: 100%;
         }
 
 footer >p {
